# Multi-Source-Research-Agent-citations

./: .gitignore  main.py  pyproject.toml  requirements.txt
src/api/: main.py  routes.py  schemas.py
src/research_agent/agents/: citation_agent.py  decomposition_agent.py  synthesis_agent.py
src/research_agent/core/: config.py  llm.py  state.py
src/research_agent/graph/: builder.py  nodes.py
src/research_agent/scripts/: ingest_documents.py
src/research_agent/tools/: document_loader.py  faiss_retriever.py  tavily_search.py
