[project]
name = "multi-source-research-agent-citations"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-groq>=0.2.3",
    "langchain-ollama>=0.2.3",
    "langgraph>=0.3.5",
    "pydantic-settings>=2.7.0",
]
